write mobile style for where to find block

--- a/src/index.html
+++ b/src/index.html
@@ -128,30 +128,45 @@
     <section class="where-to-find">
       <div class="container">
         <div class="row justify-content-md-center">
-          <h2 class="where-to-find__title col-8">Where to find us</h2>
+          <h2 class="where-to-find__title col-12">Where to find us</h2>
 
-          <p class="where-to-find__description col-8">
+          <p class="where-to-find__description col-12 col-lg-8">
             Our main offices are located in two of the most vibrant and forward-thinking cities in Europe–Kyiv and Barcelona.*
           </p>
 
-          <div class="where-to-find__gallery gallery col-12">
-            <div class="gallery__controls">
-              <button
-                type="button"
-                class="gallery__button gallery__button--kyiv col-3"
-              >
-                Kyiv
-              </button>
-              <button
-                type="button"
-                class="gallery__button gallery__button--barcelona col-3"
-              >
-                Barcelona
-              </button>
+          <div class="where-to-find__gallery gallery">
+            <div class="gallery__controls row justify-content-md-center">
+              <div class="gallery__button--wrp col-6 col-lg-4 col-xl-3">
+                <img
+                  src="./images/whereToFind/kyiv/0.png"
+                  alt="Kyiv"
+                  class="gallery__button-img"
+                >
+                <button
+                  type="button"
+                  class="gallery__button gallery__button--kyiv"
+                >
+                  Kyiv
+                </button>
+              </div>
+
+              <div class="gallery__button--wrp col-6 col-lg-4 col-xl-3">
+                <img
+                  src="./images/whereToFind/barcelona/0.png"
+                  alt="Barcelona"
+                  class="gallery__button-img"
+                >
+                <button
+                  type="button"
+                  class="gallery__button gallery__button--barcelona"
+                >
+                  Barcelona
+                </button>
+              </div>
             </div>
 
-            <div class="gallery__photos row">
-              <div class="gallery__photo--wrp gallery__photo--large-height col-6">
+            <div class="gallery__photos row justify-content-center">
+              <div class="gallery__photo--wrp gallery__photo--large-height col-12 col-lg-6">
                 <img
                   src="./images/whereToFind/kyiv/1.png"
                   alt="Kyiv"
@@ -159,8 +174,8 @@
                 >
               </div>
 
-              <div class="col-6 row">
-                <div class="gallery__photo--wrp gallery__photo--small-height col-12">
+              <div class="gallery__group col-12 col-lg-6 row">
+                <div class="gallery__photo--wrp gallery__photo--small-height order-1 order-lg-0 col-12">
                   <img
                     src="./images/whereToFind/kyiv/2.png"
                     alt="Kyiv"
