add select arrow

--- a/src/index.html
+++ b/src/index.html
@@ -129,24 +129,29 @@
         <div class="row">
 
           <div class="vacancies__wrapper col-10 offset-1">
-            <select name="positions" class="vacancies__select select">
-              <option value="">Engineering (2)</option>
-              <option value="">Data (0)</option>
-              <option value="">Design (0)</option>
-              <option value="">Copy & Localisation (0)</option>
-              <option value="">Customer Support (0)</option>
-              <option value="">Product (0)</option>
-              <option value="">Marketing (0)</option>
-              <option value="">Tutor Operation (0)</option>
-              <option value="">Leadership (0)</option>
-              <option value="">Finance/Legal (0)</option>
-            </select>
+            <div class="select">
+              <select name="positions" class="select__item">
+                <option value="">Engineering (2)</option>
+                <option value="">Data (0)</option>
+                <option value="">Design (0)</option>
+                <option value="">Copy & Localisation (0)</option>
+                <option value="">Customer Support (0)</option>
+                <option value="">Product (0)</option>
+                <option value="">Marketing (0)</option>
+                <option value="">Tutor Operation (0)</option>
+                <option value="">Leadership (0)</option>
+                <option value="">Finance/Legal (0)</option>
+              </select>
+            </div>
 
-            <select name="location" class="vacancies__select select select--dark col-5">
-              <option value="">All locations</option>
-              <option value="">Kyiv</option>
-              <option value="">Barcelona</option>
-            </select>
+            <div class="select">
+              <select name="location" class="select__item select__item--dark">
+                <option value="">All locations</option>
+                <option value="">Kyiv</option>
+                <option value="">Barcelona</option>
+              </select>
+            </div>
+
           </div>
 
           <table class="vacancies__list offset-1 col-10">
