write logic for gallery

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
                 >
                 <button
                   type="button"
-                  class="gallery__button gallery__button--kyiv"
+                  class="gallery__button gallery__button--active"
                 >
                   Kyiv
                 </button>
@@ -202,7 +202,7 @@
                 >
                 <button
                   type="button"
-                  class="gallery__button gallery__button--barcelona"
+                  class="gallery__button"
                 >
                   Barcelona
                 </button>
@@ -214,6 +214,12 @@
                 <img
                   src="./images/whereToFind/kyiv/1.png"
                   alt="Kyiv"
+                  class="gallery__photo gallery__photo--show"
+                >
+
+                <img
+                  src="./images/whereToFind/barcelona/1.png"
+                  alt="Barcelona"
                   class="gallery__photo"
                 >
               </div>
@@ -223,6 +229,12 @@
                   <img
                     src="./images/whereToFind/kyiv/2.png"
                     alt="Kyiv"
+                    class="gallery__photo gallery__photo--show"
+                  >
+
+                  <img
+                    src="./images/whereToFind/barcelona/2.png"
+                    alt="Barcelona"
                     class="gallery__photo"
                   >
                 </div>
@@ -231,6 +243,12 @@
                   <img
                     src="./images/whereToFind/kyiv/3.png"
                     alt="Kyiv"
+                    class="gallery__photo gallery__photo--show"
+                  >
+
+                  <img
+                    src="./images/whereToFind/barcelona/3.png"
+                    alt="Barcelona"
                     class="gallery__photo"
                   >
                 </div>
@@ -239,6 +257,12 @@
                   <img
                     src="./images/whereToFind/kyiv/4.png"
                     alt="Kyiv"
+                    class="gallery__photo gallery__photo--show"
+                  >
+
+                  <img
+                    src="./images/whereToFind/barcelona/4.png"
+                    alt="Barcelona"
                     class="gallery__photo"
                   >
                 </div>
