--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,7 @@
             A few more reasons why you’ll love working with us.
           </p>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
@@ -283,7 +283,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="stock"
@@ -304,7 +304,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
@@ -325,7 +325,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="location"
@@ -346,7 +346,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
@@ -367,7 +367,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="holidays"
