--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <div class="promo__content col-12">
             <p class="promo__subtitle">preply careers</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
-            <a href="#" class="btn">Browse open positions</a>
+            <a href="#vacancies" class="btn">Browse open positions</a>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies">
+    <section class="vacancies" id="vacancies">
       <div class="container">
         <div class="row">
 
@@ -454,20 +454,20 @@
     </section>
     <footer class="footer">
       <div class="container">
-        <div class="row justify-content-between">
-          <div class="footer__logo"></div>
-          <div class="footer__socials">
-            <a href="#" class="footer__linkedin"></a>
-            <a href="#" class="footer__facebook"></a>
-            <a href="#" class="footer__instagram"></a>
-            <a href="#" class="footer__youtube"></a>
+        <div class="row footer__top">
+          <div class="footer__logo col-2"></div>
+          <div class="footer__socials offset-7 col-3">
+            <a href="https://www.linkedin.com/company/preplycom/" class="footer__linkedin"></a>
+            <a href="https://www.facebook.com/preplycompany/" class="footer__facebook"></a>
+            <a href="https://www.instagram.com/preplycom" class="footer__instagram"></a>
+            <a href="https://www.youtube.com/channel/UCyDXMl-ru1F--NPCtO7aDig?feature=emb_ch_name_ex" class="footer__youtube"></a>
           </div>
         </div>
-        <div class="row justify-content-between">
-          <p class="footer__copyright">
-            &#169;2012-2020 Preply Inc.
+        <div class="row">
+          <p class="footer__copyright col-3">
+            &#169; 2012-2020 Preply Inc.
           </p>
-          <div class="footer__privacy">
+          <div class="footer__privacy offset-7 col-2">
             <a href="#">Privacy Policy</a>
           </div>
         </div>
