--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
             A few more reasons why you’ll love working with us.
           </p>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="study"
@@ -312,7 +312,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="stock"
@@ -333,7 +333,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="insurance"
@@ -354,7 +354,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="location"
@@ -375,7 +375,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--light">
               <img
                 alt="equipment"
@@ -396,7 +396,7 @@
             </div>
           </div>
 
-          <div class="perks__perk perk col-6 col-lg-4">
+          <div class="perks__perk perk col-12 col-md-6 col-lg-4">
             <div class="perk__image-wrapper perk__image-wrapper--dark">
               <img
                 alt="holidays"
