--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="promo">
-      <div class="container">
+      <div class="container promo__container">
         <div class="row promo__top">
           <div class="promo__logo col-2"></div>
           <div class="promo__privacy offset-8 col-2">
@@ -28,6 +28,13 @@
             <p class="promo__subtitle">preply careers</p>
             <h1 class="promo__title">Where your ideas create connections</h1>
             <a href="#vacancies" class="btn">Browse open positions</a>
+          </div>
+        </div>
+        <div class="promo__glassdoor">
+          <p>Read employees review on:</p>
+          <div>
+            <img src="./images/promo/glassdoor-logo.png" alt="">
+            <img src="./images/promo/glassdoor.png" alt="">
           </div>
         </div>
       </div>
