finished layout for news

--- a/src/index.html
+++ b/src/index.html
@@ -441,43 +441,57 @@
             <div class="in-news__news news news--green">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
-                <p class="news__description">
-                  Online learning platforms such as Preply will continue to see growth...”
-                </p>
-                <img
-                  alt="TechCrunch"
-                  src="./images/news/TechCrunch.png">
-                </img>
+                <div class="news__bottom">
+                  <p class="news__description">
+                    Online learning platforms such as Preply will
+                    continue to see growth...”
+                  </p>
+                  <img
+                    alt="TechCrunch"
+                    src="./images/news/TechCrunch.png"
+                    class="news__image"
+                  >
+                  </img>
+                </div>
               </div>
             </div>
 
             <div class="in-news__news news news--gray">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
-                <p class="news__description">
-                  In the U.S. - its single largest market - it has seen the
-                  number of new customers double week over week.”
-                </p>
-                <img
-                  alt="Forbes"
-                  src="./images/news/Forbes.png">
-                </img>
+                <div class="news__bottom">
+                  <p class="news__description">
+                    In the U.S. - its single largest market - it has seen the
+                    number of new customers double week over week.”
+                  </p>
+
+                  <img
+                    alt="Forbes"
+                    src="./images/news/Forbes.png"
+                    class="news__image"
+                  >
+                  </img>
+                </div>
               </div>
             </div>
 
             <div class="in-news__news news news--blue">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
-                <p class="news__description">
-                  Preply users have taken two million classes to date
-                  with 15K verified tutors of 160 nationalities teaching
-                  50 languages [and Preply states] revenue has grown
-                  tenfold over the last three years.”
-                </p>
-                <img
-                  alt="EdSurge"
-                  src="./images/news/EdSurge.png">
-                </img>
+                <div class="news__bottom">
+                  <p class="news__description">
+                    Preply users have taken two million classes to date
+                    with 15K verified tutors of 160 nationalities teaching
+                    50 languages [and Preply states] revenue has grown
+                    tenfold over the last three years.”
+                  </p>
+                  <img
+                    alt="EdSurge"
+                    src="./images/news/EdSurge.png"
+                    class="news__image"
+                  >
+                  </img>
+                </div>
               </div>
             </div>
           </div>
