add style for small screen

--- a/src/index.html
+++ b/src/index.html
@@ -446,12 +446,14 @@
                     Online learning platforms such as Preply will
                     continue to see growth...”
                   </p>
-                  <img
-                    alt="TechCrunch"
-                    src="./images/news/TechCrunch.png"
-                    class="news__image"
-                  >
-                  </img>
+                  <div class="news__image-wrapper">
+                    <img
+                      alt="TechCrunch"
+                      src="./images/news/TechCrunch.png"
+                      class="news__image"
+                    >
+                    </img>
+                  </div>
                 </div>
               </div>
             </div>
@@ -464,13 +466,14 @@
                     In the U.S. - its single largest market - it has seen the
                     number of new customers double week over week.”
                   </p>
-
-                  <img
-                    alt="Forbes"
-                    src="./images/news/Forbes.png"
-                    class="news__image"
-                  >
-                  </img>
+                  <div class="news__image-wrapper">
+                    <img
+                      alt="Forbes"
+                      src="./images/news/Forbes.png"
+                      class="news__image"
+                    >
+                    </img>
+                  </div>
                 </div>
               </div>
             </div>
@@ -485,11 +488,13 @@
                     50 languages [and Preply states] revenue has grown
                     tenfold over the last three years.”
                   </p>
-                  <img
-                    alt="EdSurge"
-                    src="./images/news/EdSurge.png"
-                    class="news__image"
-                  >
+                  <div class="news__image-wrapper">
+                    <img
+                      alt="EdSurge"
+                      src="./images/news/EdSurge.png"
+                      class="news__image"
+                    >
+                  </div>
                   </img>
                 </div>
               </div>
