--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
     <section class="promo">
       <div class="container promo__container">
         <div class="row promo__top">
-          <div class="promo__logo col-2"></div>
-          <div class="promo__privacy offset-8 col-2">
+          <div class="promo__logo col-12 col-md-2">
+            <img src="./images/logo.png" alt="">
+          </div>
+          <div class="promo__privacy offset-md-7 col-md-3">
             <a href="#">Privacy Policy</a>
           </div>
         </div>
@@ -30,13 +32,20 @@
             <a href="#vacancies" class="btn">Browse open positions</a>
           </div>
         </div>
-        <div class="promo__glassdoor">
+        <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
           <p>Read employees review on:</p>
           <div>
             <img src="./images/promo/glassdoor-logo.png" alt="">
             <img src="./images/promo/glassdoor.png" alt="">
           </div>
-        </div>
+        </a>
+        <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--small">
+          <p>Read employees review on:</p>
+          <div>
+            <img src="./images/promo/glassdoor-logo-small.png" alt="">
+            <img src="./images/promo/glassdoor-name-small.png" alt="">
+          </div>
+        </a>
       </div>
     </section>
 
