add loading=lazy for images

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,16 @@
         <div class="promo__glassdoor">
           <p>Read employees review on:</p>
           <div>
-            <img src="./images/promo/glassdoor-logo.png" loading="lazy" alt="">
-            <img src="./images/promo/glassdoor.png" loading="lazy" alt="">
+            <img
+              src="./images/promo/glassdoor-logo.png"
+              loading="lazy"
+              alt=""
+            >
+            <img
+              src="./images/promo/glassdoor.png"
+              loading="lazy"
+              alt=""
+            >
           </div>
         </div>
       </div>
