--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,16 @@
         <div class="promo__glassdoor">
           <p>Read employees review on:</p>
           <div>
-            <img src="./images/promo/glassdoor-logo.png" alt="">
-            <img src="./images/promo/glassdoor.png" alt="">
+            <img
+              src="./images/promo/glassdoor-logo.png"
+              loading="lazy"
+              alt=""
+            >
+            <img
+              src="./images/promo/glassdoor.png"
+              loading="lazy"
+              alt=""
+            >
           </div>
         </div>
       </div>
@@ -56,6 +64,7 @@
           <img
             src="./images/slogan/slogan_1.svg"
             alt="power"
+            loading="lazy"
             class="slogan__img col-xl-5 col-lg-12"
           >
         </div>
@@ -75,6 +84,7 @@
               <img
                 src="./images/peopleBehind/1.png"
                 alt="Proply logo"
+                loading="lazy"
                 class="people-behind__img"
               >
             </div>
@@ -82,6 +92,7 @@
               <img
                 src="./images/peopleBehind/2.png"
                 alt="Proply team"
+                loading="lazy"
                 class="people-behind__img"
               >
             </div>
@@ -89,6 +100,7 @@
               <img
                 src="./images/peopleBehind/3.png"
                 alt="Proply team"
+                loading="lazy"
                 class="people-behind__img"
               >
             </div>
@@ -96,6 +108,7 @@
               <img
                 src="./images/peopleBehind/4.png"
                 alt="Proply team"
+                loading="lazy"
                 class="people-behind__img"
               >
             </div>
@@ -103,6 +116,7 @@
               <img
                 src="./images/peopleBehind/5.png"
                 alt="Proply team"
+                loading="lazy"
                 class="people-behind__img"
               >
             </div>
@@ -126,6 +140,7 @@
           <img
             src="./images/slogan/slogan_2.svg"
             alt="partnership"
+            loading="lazy"
             class="slogan__img offset-xl-1 col-xl-5 col-lg-12"
           >
         </div>
@@ -226,12 +241,14 @@
                 <img
                   src="./images/whereToFind/kyiv/1.png"
                   alt="Kyiv"
+                  loading="lazy"
                   class="gallery__photo gallery__photo--show"
                 >
 
                 <img
                   src="./images/whereToFind/barcelona/1.png"
                   alt="Barcelona"
+                  loading="lazy"
                   class="gallery__photo"
                 >
               </div>
@@ -241,12 +258,14 @@
                   <img
                     src="./images/whereToFind/kyiv/2.png"
                     alt="Kyiv"
+                    loading="lazy"
                     class="gallery__photo gallery__photo--show"
                   >
 
                   <img
                     src="./images/whereToFind/barcelona/2.png"
                     alt="Barcelona"
+                    loading="lazy"
                     class="gallery__photo"
                   >
                 </div>
@@ -255,12 +274,14 @@
                   <img
                     src="./images/whereToFind/kyiv/3.png"
                     alt="Kyiv"
+                    loading="lazy"
                     class="gallery__photo gallery__photo--show"
                   >
 
                   <img
                     src="./images/whereToFind/barcelona/3.png"
                     alt="Barcelona"
+                    loading="lazy"
                     class="gallery__photo"
                   >
                 </div>
@@ -269,12 +290,14 @@
                   <img
                     src="./images/whereToFind/kyiv/4.png"
                     alt="Kyiv"
+                    loading="lazy"
                     class="gallery__photo gallery__photo--show"
                   >
 
                   <img
                     src="./images/whereToFind/barcelona/4.png"
                     alt="Barcelona"
+                    loading="lazy"
                     class="gallery__photo"
                   >
                 </div>
@@ -345,6 +368,7 @@
               <img
                 alt="insurance"
                 src="images/perks/Insurance.svg"
+                loading="lazy"
                 class="perk__image"
               >
               </img>
@@ -366,6 +390,7 @@
               <img
                 alt="location"
                 src="images/perks/Location.svg"
+                loading="lazy"
                 class="perk__image"
               >
               </img>
@@ -387,6 +412,7 @@
               <img
                 alt="equipment"
                 src="images/perks/Equipment.svg"
+                loading="lazy"
                 class="perk__image"
               >
               </img>
@@ -408,6 +434,7 @@
               <img
                 alt="holidays"
                 src="images/perks/Holidays.svg"
+                loading="lazy"
                 class="perk__image"
               >
               </img>
@@ -450,6 +477,7 @@
                     <img
                       alt="TechCrunch"
                       src="./images/news/TechCrunch.png"
+                      loading="lazy"
                       class="news__image"
                     >
                     </img>
@@ -470,6 +498,7 @@
                     <img
                       alt="Forbes"
                       src="./images/news/Forbes.png"
+                      loading="lazy"
                       class="news__image"
                     >
                     </img>
@@ -492,6 +521,7 @@
                     <img
                       alt="EdSurge"
                       src="./images/news/EdSurge.png"
+                      loading="lazy"
                       class="news__image"
                     >
                     </img>
@@ -518,6 +548,7 @@
           <img
             src="./images/slogan/slogan_3.svg"
             alt="learning"
+            loading="lazy"
             class="slogan__img slogan__img--center offset-xl-1 col-xl-5 col-lg-12"
           >
         </div>
