--- a/src/index.html
+++ b/src/index.html
@@ -566,8 +566,10 @@
     <footer class="footer">
       <div class="container">
         <div class="row footer__top">
-          <div class="footer__logo col-2"></div>
-          <div class="footer__socials offset-7 col-3">
+          <div class="footer__logo col-4 col-lg-2">
+            <img src="./images/logo.png" alt="">
+          </div>
+          <div class="footer__socials offset-2 col-6 offset-lg-7 col-lg-3">
             <a href="https://www.linkedin.com/company/preplycom/" class="footer__linkedin"></a>
             <a href="https://www.facebook.com/preplycompany/" class="footer__facebook"></a>
             <a href="https://www.instagram.com/preplycom" class="footer__instagram"></a>
@@ -575,10 +577,10 @@
           </div>
         </div>
         <div class="row">
-          <p class="footer__copyright col-3">
+          <p class="footer__copyright col-12 col-lg-4">
             &#169; 2012-2020 Preply Inc.
           </p>
-          <div class="footer__privacy offset-7 col-2">
+          <div class="footer__privacy col-12 offset-lg-6 col-lg-2">
             <a href="#">Privacy Policy</a>
           </div>
         </div>
