--- a/src/index.html
+++ b/src/index.html
@@ -246,69 +246,77 @@
             </div>
 
             <div class="gallery__photos row justify-content-center">
-              <div class="gallery__photo--wrp gallery__photo--large-height col-12 col-lg-6">
-                <img
-                  src="./images/whereToFind/kyiv/1.png"
-                  alt="Kyiv"
-                  loading="lazy"
-                  class="gallery__photo gallery__photo--show"
-                >
+              <div class="gallery__photo-item gallery__photo--large-height col-12 col-lg-6">
+                <div class="gallery__photo--wrp">
+                  <img
+                    src="./images/whereToFind/kyiv/1.png"
+                    alt="Kyiv"
+                    loading="lazy"
+                    class="gallery__photo gallery__photo--show"
+                  >
 
-                <img
-                  src="./images/whereToFind/barcelona/1.png"
-                  alt="Barcelona"
-                  loading="lazy"
-                  class="gallery__photo"
-                >
+                  <img
+                    src="./images/whereToFind/barcelona/1.png"
+                    alt="Barcelona"
+                    loading="lazy"
+                    class="gallery__photo"
+                  >
+                </div>
               </div>
 
               <div class="gallery__group col-12 col-lg-6 row">
-                <div class="gallery__photo--wrp gallery__photo--small-height order-1 order-lg-0 col-12">
-                  <img
-                    src="./images/whereToFind/kyiv/2.png"
-                    alt="Kyiv"
-                    loading="lazy"
-                    class="gallery__photo gallery__photo--show"
-                  >
+                <div class="gallery__photo-item gallery__photo--small-height order-1 order-lg-0 col-12">
+                  <div class="gallery__photo--wrp">
+                    <img
+                      src="./images/whereToFind/kyiv/2.png"
+                      alt="Kyiv"
+                      loading="lazy"
+                      class="gallery__photo gallery__photo--show"
+                    >
 
-                  <img
-                    src="./images/whereToFind/barcelona/2.png"
-                    alt="Barcelona"
-                    loading="lazy"
-                    class="gallery__photo"
-                  >
+                    <img
+                      src="./images/whereToFind/barcelona/2.png"
+                      alt="Barcelona"
+                      loading="lazy"
+                      class="gallery__photo"
+                    >
+                  </div>
                 </div>
 
-                <div class="gallery__photo--wrp gallery__photo--small-height col-6">
-                  <img
-                    src="./images/whereToFind/kyiv/3.png"
-                    alt="Kyiv"
-                    loading="lazy"
-                    class="gallery__photo gallery__photo--show"
-                  >
+                <div class="gallery__photo-item gallery__photo--small-height col-6">
+                  <div class="gallery__photo--wrp">
+                    <img
+                      src="./images/whereToFind/kyiv/3.png"
+                      alt="Kyiv"
+                      loading="lazy"
+                      class="gallery__photo gallery__photo--show"
+                    >
 
-                  <img
-                    src="./images/whereToFind/barcelona/3.png"
-                    alt="Barcelona"
-                    loading="lazy"
-                    class="gallery__photo"
-                  >
+                    <img
+                      src="./images/whereToFind/barcelona/3.png"
+                      alt="Barcelona"
+                      loading="lazy"
+                      class="gallery__photo"
+                    >
+                  </div>
                 </div>
 
-                <div class="gallery__photo--wrp gallery__photo--small-height col-6">
-                  <img
-                    src="./images/whereToFind/kyiv/4.png"
-                    alt="Kyiv"
-                    loading="lazy"
-                    class="gallery__photo gallery__photo--show"
-                  >
+                <div class="gallery__photo-item gallery__photo--small-height col-6">
+                  <div class="gallery__photo--wrp">
+                    <img
+                      src="./images/whereToFind/kyiv/4.png"
+                      alt="Kyiv"
+                      loading="lazy"
+                      class="gallery__photo gallery__photo--show"
+                    >
 
-                  <img
-                    src="./images/whereToFind/barcelona/4.png"
-                    alt="Barcelona"
-                    loading="lazy"
-                    class="gallery__photo"
-                  >
+                    <img
+                      src="./images/whereToFind/barcelona/4.png"
+                      alt="Barcelona"
+                      loading="lazy"
+                      class="gallery__photo"
+                    >
+                  </div>
                 </div>
               </div>
             </div>
