change class names for news cards

--- a/src/index.html
+++ b/src/index.html
@@ -482,7 +482,7 @@
           </p>
 
           <div class="in-news__wrapper col-12">
-            <div class="in-news__news news news--green">
+            <div class="in-news__news news news--crunch">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
                 <div class="news__bottom">
@@ -503,7 +503,7 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--gray">
+            <div class="in-news__news news news--forbes">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
                 <div class="news__bottom">
@@ -524,7 +524,7 @@
               </div>
             </div>
 
-            <div class="in-news__news news news--blue">
+            <div class="in-news__news news news--edsurge">
               <div class="news__wrapper">
                 <h4 class="news__quotes">“</h4>
                 <div class="news__bottom">
