basic select work

--- a/src/index.html
+++ b/src/index.html
@@ -136,48 +136,34 @@
         <div class="row">
 
           <div class="vacancies__wrapper col-10 offset-1">
-            <div class="select">
-              <select name="positions" class="select__item">
-                <option value="">Engineering (2)</option>
-                <option value="">Data (0)</option>
-                <option value="">Design (0)</option>
-                <option value="">Copy & Localisation (0)</option>
-                <option value="">Customer Support (0)</option>
-                <option value="">Product (0)</option>
-                <option value="">Marketing (0)</option>
-                <option value="">Tutor Operation (0)</option>
-                <option value="">Leadership (0)</option>
-                <option value="">Finance/Legal (0)</option>
-              </select>
+            <div class="team group">
+              <div class="select" tabindex="0"></div>
+              <ul class="options">
+                <li class="option">Engineering</li>
+                <li class="option">Data</li>
+                <li class="option">Design</li>
+                <li class="option">Copy & Localisation</li>
+                <li class="option">Customer Support</li>
+                <li class="option">Product</li>
+                <li class="option">Marketing</li>
+                <li class="option">Tutor Operation</li>
+                <li class="option">Leadership</li>
+                <li class="option">Finance/Legal</li>
+              </ul>
             </div>
 
-            <div class="select">
-              <select name="location" class="select__item select__item--dark">
-                <option value="">All locations</option>
-                <option value="">Kyiv</option>
-                <option value="">Barcelona</option>
-              </select>
+            <div class="location group">
+              <div class="select select--dark" tabindex="0"></div>
+              <ul class="options">
+                <li class="option">All locations</li>
+                <li class="option">Kyiv</li>
+                <li class="option">Barcelona</li>
+              </ul>
             </div>
 
           </div>
 
-          <table class="vacancies__list offset-1 col-10">
-            <tr class="vacancies__item">
-              <td class="vacancies__position">Full stack engineer</td>
-              <td class="vacancies__location">Kyiv</td>
-              <td class="vacancies__apply">
-                <button class="vacancies__btn">Apply</button>
-              </td>
-            </tr>
-
-            <tr class="vacancies__item">
-              <td class="vacancies__position">DevOps Manager</td>
-              <td class="vacancies__location">Barcelona</td>
-              <td class="vacancies__apply">
-                <button class="vacancies__btn">Apply</button>
-              </td>
-            </tr>
-          </table >
+          <table class="vacancies__list offset-1 col-10"></table >
         </div>
       </div>
     </section>
