--- a/src/index.html
+++ b/src/index.html
@@ -131,36 +131,34 @@
         </div>
       </div>
     </section>
-    <section class="vacancies" id="vacancies">
+    <section class="vacancies">
       <div class="container">
         <div class="row">
-
           <div class="vacancies__wrapper col-10 offset-1">
-            <div class="team group">
-              <div class="select" tabindex="0"></div>
-              <ul class="options">
-                <li class="option">Engineering</li>
-                <li class="option">Data</li>
-                <li class="option">Design</li>
-                <li class="option">Copy & Localisation</li>
-                <li class="option">Customer Support</li>
-                <li class="option">Product</li>
-                <li class="option">Marketing</li>
-                <li class="option">Tutor Operation</li>
-                <li class="option">Leadership</li>
-                <li class="option">Finance/Legal</li>
+            <div class="js-team js-group select">
+              <div class="js-select select__basic-option" tabindex="0"></div>
+              <ul class="js-options select__options">
+                <li class="js-option select__option">Engineering</li>
+                <li class="js-option select__option">Data</li>
+                <li class="js-option select__option">Design</li>
+                <li class="js-option select__option">Copy & Localisation</li>
+                <li class="js-option select__option">Customer Support</li>
+                <li class="js-option select__option">Product</li>
+                <li class="js-option select__option">Marketing</li>
+                <li class="js-option select__option">Tutor Operation</li>
+                <li class="js-option select__option">Leadership</li>
+                <li class="js-option select__option">Finance/Legal</li>
               </ul>
             </div>
 
-            <div class="location group">
-              <div class="select select--dark" tabindex="0"></div>
-              <ul class="options">
-                <li class="option">All locations</li>
-                <li class="option">Kyiv</li>
-                <li class="option">Barcelona</li>
+            <div class="js-location js-group select select--dark">
+              <div class="js-select select__basic-option" tabindex="0"></div>
+              <ul class="js-options select__options">
+                <li class="js-option select__option">All locations</li>
+                <li class="js-option select__option">Kyiv</li>
+                <li class="js-option select__option">Barcelona</li>
               </ul>
             </div>
-
           </div>
 
           <table class="vacancies__list offset-1 col-10"></table >
