--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
         </div>
       </div>
     </section>
-    <section class="vacancies">
+    <section class="vacancies" id="vacancies">
       <div class="container">
         <div class="row">
           <div class="vacancies__wrapper col-10 offset-1">
@@ -543,7 +543,7 @@
               Shape the future <br> of effective learning
             </h2>
 
-            <button class="btn btn--light slogan__btn">Browse open positions</button>
+            <a href="#vacancies" class="btn btn--light slogan__btn">Browse open positions</a>
           </div>
 
           <img
