--- a/src/index.html
+++ b/src/index.html
@@ -561,7 +561,7 @@
           <div class="footer__logo col-4 col-lg-2">
             <img src="./images/logo.png" alt="">
           </div>
-          <div class="footer__socials offset-2 col-6 offset-lg-7 col-lg-3">
+          <div class="footer__socials offset-1 offset-sm-2 col-6 offset-lg-7 col-lg-3">
             <a href="https://www.linkedin.com/company/preplycom/" class="footer__linkedin"></a>
             <a href="https://www.facebook.com/preplycompany/" class="footer__facebook"></a>
             <a href="https://www.instagram.com/preplycom" class="footer__instagram"></a>
